--- a/main.html
+++ b/main.html
@@ -7,8 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+
+	<div class="container" id="container">
+		<img src="https://media.istockphoto.com/id/176077727/photo/siberian-husky.jpg?s=612x612&w=0&k=20&c=v20F2DaVFpxYvy2V82S6ZzS2XboK_haU5kc3p_QQEXA=" alt="dog" />
+	</div>
+	
+	
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
